--- a/docs/paper.Rmd
+++ b/docs/paper.Rmd
@@ -14,8 +14,8 @@ output:
 #    number_sections: true
 linkcolor: blue
 bibliography:
-  - ../input/bib/EconomiaMoral.bib
-  - ../input/bib/meritocracy.bib
+  - ../input/bib/intro-merit-redistribution.bib
+  - ../input/bib/MeritocraciayRedistribucion.bib
 editor_options:
   chunk_output_type: console
 ---
@@ -43,22 +43,22 @@ library(captioner)
 
 # Introduction
 
-La igualdad de oportunidades no solo fomenta la cohesión social y la sostenibilidad de las democracias (PNUD, 2017), sino que también fomenta el crecimiento económico mediante el aprovechamiento del capital humano de toda la población (ONU, 2016). Para mejorar la igualdad de oportunidades es necesario garantizar el acceso universal a educación y salud de calidad, además de disminuir la desigualdad económica a través de políticas redistributivas (ONU, 2018). Mejorar la igualdad de oportunidades mediante redistribución y acceso universal a servicios sociales requiere, en el contexto de la democracia, una opinión pública que esté dispuesta a respaldar estas políticas [citar]. No obstante, algunas investigaciones han evidenciado que considerables fracciones de la población legitiman los actuales niveles de desigualdad y justifican el acceso desigual a servicios elementales como salud (Immergut, Schneider, 2020; Becker, 2020). En este contexto, para fomentar el apoyo a políticas que disminuyan la desigualdad de oportunidades, es necesario comprender qué factores se relacionan con mayores preferencias redistributivas y de acceso universal a salud y educación de calidad. 
+La igualdad de oportunidades no solo fomenta la cohesión social y la sostenibilidad de las democracias (PNUD, 2017), sino que también fomenta el crecimiento económico mediante el aprovechamiento del capital humano de toda la población [@oecdMeetingOECDCouncil2016]. Para mejorar la igualdad de oportunidades es necesario garantizar el acceso universal a educación y salud de calidad, además de disminuir la desigualdad económica a través de políticas redistributivas [@oecdBrokenSocialElevator2018]. Mejorar la igualdad de oportunidades mediante redistribución y acceso universal a servicios sociales requiere, en el contexto de la democracia, una opinión pública que esté dispuesta a respaldar estas políticas [citar]. No obstante, algunas investigaciones han evidenciado que considerables fracciones de la población legitiman los actuales niveles de desigualdad y justifican el acceso desigual a servicios elementales como salud [@immergutItUnfairAffluent2020; @beckerMindIncomeGaps2020]. En este contexto, para fomentar el apoyo a políticas que disminuyan la desigualdad de oportunidades, es necesario comprender qué factores se relacionan con mayores preferencias redistributivas y de acceso universal a salud y educación de calidad. 
 
-
-La creciente desigualdad y las demandas por un mayor gasto redistributivo desde ciertos sectores han motivado múltiples estudios sobre la legitimidad social de la desigualdad (Alesina and Angeletos 2005; Dimick, Rueda, and Stegmueller 2018). Estas investigaciones han destacado distintos aspectos ideológicos y contextuales que se relacionan con la justificación de la desigualdad. Respecto a las ideologías, algunas investigaciones han concluido que la percepción de meritocracia legitima la desigualdad, justificándose en base al esfuerzo y el talento individual, menospreciando la relevancia de las oportunidades desiguales (Kunovich y Slomczynski, 2007; Duru-Bellat y Tenret, 2012; Hadjar, 2008 ; Madeira et al. 2019). Esta relación podría deberse, en parte, a los prejuicios hacia los pobres que poseen quienes creen en la meritocracia. En torno a la importancia del contexto, podría pensarse que en sociedades con mayor desigualdad los ciudadanos exigirán mayor redistribución (Meltzer y Richard 1981), no obstante, esto no siempre ocurre de dicho modo (Schröder 2017; Solt 2010; Solt et al. 2016). Por ejemplo, respecto a la salud, se ha demostrado que mayores niveles de desigualdad económica en salud se asocian a creencias que justifican moralmente esta desigualdad (Immergut, Schneider, 2020).
+La creciente desigualdad y las demandas por un mayor gasto redistributivo desde ciertos sectores han motivado múltiples estudios sobre la legitimidad social de la desigualdad [@suhayIdeologyAffluenceRich2020; @dimickModelsOtherRegardingPreferences2018]. Estas investigaciones han destacado distintos aspectos ideológicos y contextuales que se relacionan con la justificación de la desigualdad. Respecto a las ideologías, algunas investigaciones han concluido que la percepción de meritocracia legitima la desigualdad, justificándose en base al esfuerzo y el talento individual, menospreciando la relevancia de las oportunidades desiguales [@kunovichSystemsDistributionSense2007; @duru-bellatWhoMeritocracyIndividual2012; @hadjarMeritokratieAlsLegitimationsprinzip2008; @madeiraPrimesConsequencesSystematic2019a]. Esta relación podría deberse, en parte, a los prejuicios hacia los pobres que poseen quienes creen en la meritocracia. En torno a la importancia del contexto, podría pensarse que en sociedades con mayor desigualdad los ciudadanos exigirán mayor redistribución [@meltzerRationalTheorySize1981], no obstante, esto no siempre ocurre de dicho modo [@schroderIncomeInequalityRelated2017; @soltEconomicInequalityBelief2016]. Por ejemplo, respecto a la salud, se ha demostrado que mayores niveles de desigualdad económica en salud se asocian a creencias que justifican moralmente esta desigualdad [@immergutItUnfairAffluent2020].
 
 Frente a la creciente cantidad de investigaciones que relacionan las preferencias redistributivas con las creencias meritocráticas, el presente artículo busca aportar desde dos aspectos. Por un lado, proponemos un modelo que incorpora una definición multidimensional de creencias meritocráticas (distinguiendo entre preferencias y percepciones). Por otro lado, daremos un mayor énfasis en los efectos contextuales producidos por la distribución económica del país, expresada en su riqueza, su desigualdad, y su libertad económica. 
 
-Algunos artículos al evaluar el efecto de las creencias meritocráticas en las opiniones sobre desigualdad y redistribución utilizan una definición simple de meritocracia, la cual no diferencia entre percepciones o preferencias y considera aspectos meritocráticos y no meritocráticos como polos de un mismo continuo. Considerar las creencias meritocráticas como un constructo unidimensional es una decisión metodológica inconsistente frente a los distintos análisis de la dimensionalidad del constructo  (Kunovich y Slomczynski, 2007; Reynolds y Xian, 2014). Además de los problemas de validez, esta forma unidimensional de operacionalizar el concepto es insuficiente debido a que no permite evaluar específicamente qué dimensión de las ideas meritocráticas se relaciona con las preferencias redistributivas, si las percepciones de que el país es efectivamente meritocrático o las preferencias de que debería serlo. 
+Algunos artículos al evaluar el efecto de las creencias meritocráticas en las opiniones sobre desigualdad y redistribución utilizan una definición simple de meritocracia, la cual no diferencia entre percepciones o preferencias y considera aspectos meritocráticos y no meritocráticos como polos de un mismo continuo. Considerar las creencias meritocráticas como un constructo unidimensional es una decisión metodológica inconsistente frente a los distintos análisis de la dimensionalidad del constructo  [@kunovichSystemsDistributionSense2007; @reynoldsPerceptionsMeritocracyLand2014]. Además de los problemas de validez, esta forma unidimensional de operacionalizar el concepto es insuficiente debido a que no permite evaluar específicamente qué dimensión de las ideas meritocráticas se relaciona con las preferencias redistributivas, si las percepciones de que el país es efectivamente meritocrático o las preferencias de que debería serlo. 
 
 En torno a los efectos contextuales, es comprensible que la relación entre preferencias redistributivas y creencias meritocráticas no sea igual en todos los países. Al respecto, suponemos que distintos niveles de desigualdad, así como distintos niveles de libertad económica, serán capaces de explicar las diferencias en las relaciones entre percepciones meritocráticas y preferencias redistributivas. Se espera que en países con menor desigualdad, mayores percepciones meritocráticas fomenten menores preferencias redistributivas, mientras que en sociedades con mayores niveles de desigualdad la influencia de la normalización de la inequidad es tan extendida como parámetro moral, que incluso quienes perciben que el éxito no es fruto del mérito propio, poseerán una baja preferencia por redistribución, no existiendo mayor relación entre ambas variables en estos contextos.
 
 En vista de todo lo anterior, nuestras preguntas de investigación son:
 
-¿Cómo se relacionan las percepciones  meritocráticas con las preferencias redistributivas y las preferencias sobre el acceso universal a derechos sociales?
+* ¿Cómo se relacionan las percepciones  meritocráticas con las preferencias redistributivas y las preferencias sobre el acceso universal a derechos sociales?
 
-¿En qué medida la desigualdad de los países y su libertad económica logran explicar la diferencia entre países de la relación entre percepciones meritocráticas y preferencias redistributivas?
+
+* ¿En qué medida la desigualdad de los países y su libertad económica logran explicar la diferencia entre países de la relación entre percepciones meritocráticas y preferencias redistributivas?
 
 Para responder estas preguntas realizaremos un análisis multinivel con interacciones entre niveles, a partir de los datos del módulo de desigualdad social del Programa internacional de encuestas sociales (ISSP). Para este análisis contamos con un total de 55021 encuestados pertenecientes a 40 países. Como se señaló anteriormente, es necesario incorporar una conceptualización más precisa de los conceptos y una metodología que permita explicar las diferencias en la relación meritocracia-redistribución en distintos países. Para abordar estas necesidades teóricas, se trabajará en términos metodológicos con análisis factoriales, para evaluar la validez de los constructos, y con regresiones multinivel, para evaluar los efectos contextuales, las pendientes aleatorias y las interacciones entre niveles.
 
@@ -348,7 +348,7 @@ d) Es la meritocracia un mediador del efecto de desigualdad en marquetización?
 
 ## Datos 
 
-Los datos utilizados provienen del módulo de desigualdad social de la encuesta internacional ISSP 2009 donde se realizan preguntas relativas a creencias sobre la desigualdad y la redistribución (https://dbk.gesis.org/dbksearch). La encuesta se aplica en cada país por centros nacionales de investigación y, posteriormente, los datos son agregados por la organización. Para las variables a nivel país, se utilizaron las bases de datos Standardized World Income Inequality Database (SWIID) y Quality of Government Index (QOG). Por un lado, SWIID representa el mayor esfuerzo por recopilar información precisa de la desigualdad a partir de fuentes internacionales (eg. OCDE, CEDLAS, BM), incorporando índices comparables de desigualdad económica y redistribución del ingreso, tales como el Índice Gini para la desigualdad de ingresos disponibles, el Gini de mercado, y la redistribución neta y relativa para 198 países (Solt, 2020). Por otro lado, la base de datos QOG posee variables respecto a la calidad de la gobernanza de los países basados en la percepción de. sus ciudadanos (Charron, 2013).
+Los datos utilizados provienen del módulo de desigualdad social de la encuesta internacional ISSP [2009](https://dbk.gesis.org/dbksearch) donde se realizan preguntas relativas a creencias sobre la desigualdad y la redistribución. La encuesta se aplica en cada país por centros nacionales de investigación y, posteriormente, los datos son agregados por la organización. Para las variables a nivel país, se utilizaron las bases de datos Standardized World Income Inequality Database (SWIID) y Quality of Government Index (QOG). Por un lado, SWIID representa el mayor esfuerzo por recopilar información precisa de la desigualdad a partir de fuentes internacionales (eg. OCDE, CEDLAS, BM), incorporando índices comparables de desigualdad económica y redistribución del ingreso, tales como el Índice Gini para la desigualdad de ingresos disponibles, el Gini de mercado, y la redistribución neta y relativa para 198 países [@Solt2020]. Por otro lado, la base de datos QOG posee variables respecto a la calidad de la gobernanza de los países basados en la percepción de. sus ciudadanos [@teorellQoGStandardDataset2020].
 
 
 ```{r echo=FALSE }
@@ -386,7 +386,7 @@ tab01 <- read.csv(file = "input/data/original/materials/table01.csv",header = 1,
 
  cnames <- c("Dimension", "Factor","Statement")
 
- caption01 <- c("Dependents y Predictors")
+ caption01 <- c("Dependents and Predictors")
  
  tb.foot <- paste0("Non-meritocratic perception is a second-order factor made up of three factors, (A) Inequality of origin, (B) Inequality due to contacts and (C) Ascribed inequality.")
  
@@ -399,36 +399,35 @@ tab01 <- read.csv(file = "input/data/original/materials/table01.csv",header = 1,
 
 
 
-## Variable dependiente: preferencias redistributivas.
+### Variable dependiente: preferencias redistributivas.
 
 La variable dependiente preferencias redistributivas es medida a partir de un conjunto de cinco ítems tipo Likert que forman dos variables latentes. Se le preguntó al encuestado su grado de acuerdo con cada uno de los ítems, las categorías de respuesta van desde “Completely agree” (1) hasta “Completely disagree” (5) y fueron invertidas para la construcción de los puntajes factoriales . Tres indicadores se agrupan en el factor “preferencias redistributivas” y dos en el factor “preferencias por la mercantilización de servicios básicos”. 
 
-Tal como se presenta en la Figura X el primer factor, preferencias redistributivas, incorpora indicadores relativos al rol que los ciudadanos esperan del Estado en tres aspectos: reducción de la desigualdad, estándares mínimos de dignidad a desempleados y aplicación de impuestos más altos a los más ricos. Indicadores de este tipo han sido usados en investigaciones similares, abordando las expectativas de los ciudadanos sobre el actuar del gobierno (10.1016/j.ejpoleco.2020.101880; 10.1007/s11211-020-00354-9). 
+Tal como se presenta en la Figura X el primer factor, preferencias redistributivas, incorpora indicadores relativos al rol que los ciudadanos esperan del Estado en tres aspectos: reducción de la desigualdad, estándares mínimos de dignidad a desempleados y aplicación de impuestos más altos a los más ricos. Indicadores de este tipo han sido usados en investigaciones similares, abordando las expectativas de los ciudadanos sobre el actuar del gobierno [@andreoliPreferencesRedistributionExposure2020; @vanhootegemDifferentiatedDistributiveJustice2020]. 
 
 El segundo factor, preferencias por la mercantilización de servicios básicos, incorpora indicadores que refieren a la posibilidad de acceder a servicios de mejor calidad por medio del pago en dos servicios: la salud y la educación. Se testeó un análisis factorial confirmatorio de ambos factores, el cual, presentó un ajuste adecuado (CFI = 0.999, RMSEA = 0.043, χ2 (df = 4) = 363.069, p = 0.000). Las dos variables dependientes fueron producidas imputando valores predichos a cada caso a partir de las variables latentes, creando así dos variables de puntajes factoriales. 
  
-## Variables independientes.
+### Variables independientes.
 
-Las variables independientes principales en el nivel individual refieren a creencias meritocráticas. Éstas han sido operacionalizadas en cuatro factores considerando las diferencias entre preferencias y percepciones (duru, profe), y entre creencias meritocráticas y creencias no meritocráticas. Las variables latentes estimadas son: preferencia meritocrática del pago, preferencias no meritocráticas de pago basadas en las necesidades, percepción meritocrática y percepción no meritocrática. Esta última variable es una variable latente de segundo orden estimada a partir de tres otras variables latentes relativas a tres desigualdades adscritas: de origen socioeconómico, de género y de raza. Para medir estos cuatro factores hemos utilizado las variables del módulo de desigualdad social de la ISSP tradicionalmente utilizadas para medir estas creencias, la escala “get ahead” y la escala “ought to earn”. Adicionalmente, se agregaron a los análisis variables como el quintil de ingreso, el estatus subjetivo, si cursó estudios universitarios (o no), el género y edad. 
+Las variables independientes principales en el nivel individual refieren a creencias meritocráticas. Éstas han sido operacionalizadas en cuatro factores considerando las diferencias entre preferencias y percepciones [@duru-bellatWhoMeritocracyIndividual2012, @castilloMeritocraciaDesigualdadEconomica2019], y entre creencias meritocráticas y creencias no meritocráticas. Las variables latentes estimadas son: preferencia meritocrática del pago, preferencias no meritocráticas de pago basadas en las necesidades, percepción meritocrática y percepción no meritocrática. Esta última variable es una variable latente de segundo orden estimada a partir de tres otras variables latentes relativas a tres desigualdades adscritas: de origen socioeconómico, de género y de raza. Para medir estos cuatro factores hemos utilizado las variables del módulo de desigualdad social de la ISSP tradicionalmente utilizadas para medir estas creencias, la escala “get ahead” y la escala “ought to earn”. Adicionalmente, se agregaron a los análisis variables como el quintil de ingreso, el estatus subjetivo, si cursó estudios universitarios (o no), el género y edad. 
 
 A nivel país se utiliza la variable Gini neto de la base de datos SWIID y el índice de libertad para la acción económica (fi_index) de la base QOG. La variable GINI de mercado representa la desigualdad que es producida por la distribución de la renta dentro del mercado, sin considerar la disminución de la desigualdad generada por los impuestos y la redistribución, a diferencia del Gini neto, que sí incorpora dicha reducción (citar swiid). El índice de libertad para la acción económica fi_index busca representar la mercantilización de los servicios en general (citar fi_index).
 
-## Enfoque y técnicas de análisis.
+### Enfoque y técnicas de análisis.
 
 Como técnicas analíticas se utilizaron análisis factoriales e imputación de puntajes factoriales, para la construcción de las variables y  regresiones multinivel para el análisis de las relaciones. Utilizar regresiones multinivel es beneficioso para este tipo de investigaciones pues nos permite comprender los efectos de los contextos nacionales (http://www.jstor.org/stable/2779798).
 En primer lugar, se estimó el efecto de la percepción meritocrática sobre las preferencias por redistribución y las preferencias por la mercantilización de servicios básicos. Ambas estimaciones se realizaron desde una perspectiva multinivel, incorporando interceptos aleatorios. Además, se controlaron dichos efectos por otras creencias meritocráticas (preferencia meritocrática, preferencia no meritocrática, percepción no meritocrática) y por otras variables relevantes (estatus subjetivo, quintil de ingreso, educación universitaria, entre otras).
 
 [Fórmulas]
 
-Posteriormente utilizando las herramientas multinivel se evaluó la capacidad de la desigualdad económica y la libertad económica de moderar ambas relaciones planteadas. En primer lugar, se aleatorizaron las pendientes, comprobando que el sentido y la fuerza de los efectos varían de un país a otro. Para explicar esta variación, se utilizaron interacciones multinivel para evaluar la capacidad de la desigualdad del país de moderar la relación entre percepciones  meritocráticas y preferencias redistributivas. Similarmente, se evaluó la capacidad de la libertad económica de moderar la relación entre percepciones meritocráticas y preferencias por la mercantilización de servicios básicos. Para obtener resultados robustos en las interacciones se siguieron las recomendaciones de Aguinis, Gottfredson y Culpepper (2013),  doi :10.1177/0149206313478188
-
+Posteriormente utilizando las herramientas multinivel se evaluó la capacidad de la desigualdad económica y la libertad económica de moderar ambas relaciones planteadas. En primer lugar, se aleatorizaron las pendientes, comprobando que el sentido y la fuerza de los efectos varían de un país a otro. Para explicar esta variación, se utilizaron interacciones multinivel para evaluar la capacidad de la desigualdad del país de moderar la relación entre percepciones  meritocráticas y preferencias redistributivas. Similarmente, se evaluó la capacidad de la libertad económica de moderar la relación entre percepciones meritocráticas y preferencias por la mercantilización de servicios básicos. Para obtener resultados robustos en las interacciones se siguieron las recomendaciones de @aguinisBestPracticeRecommendationsEstimating2013a . 
 [Formulas]
 
+### Herramientas analiticas.
+
+El software de análisis estadístico utilizado fue R (version 4.00) y la plataforma de edición Github. Para el análisis factorial confirmatorio utilizamos el paquete lavaan (version 0.6-3; Rosseel, 2020), mientras que para los análisis multinivel recurrimos al paquete lme4 (version 1.1-23; Bates et al. 2019). 
  
-## Herramientas analiticas.
-
-El software de análisis estadístico utilizado fue R (version 4.00) y la plataforma de edición Github. Para el análisis factorial confirmatorio utilizamos el paquete lavaan (version 0.6-3; Rosseel, 2020), mientras que para los análisis multinivel recurrimos al paquete lme4 (version 1.1-23; Bates et al. 2019). provided by The Data Catalogue DBK (https://dbk.gesis.org/dbksearch).
-
+[provided by The Data Catalogue DBK](https://dbk.gesis.org/dbksearch).
 
 
 
